--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soul</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="ghost.png" type="image/x-icon">
+    <title>Soul Base</title>
 </head>
 <body>
-    
+    <div id="title">
+
+    </div>
 </body>
 </html>
